<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.PasswordRecoveryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maidenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maidenText"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/maidenEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/maidenHint"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/firstJobText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstJobTextVal"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/firstJobEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/firstJobHint"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorAccent"
                android:text="@string/action_register"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstJobEdit"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="464dp" />

            <TextView
                android:id="@+id/backText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backText"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>