<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ChangePasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/passwordPromptText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordPromptTextValue"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordPromptEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/passwordConfirmText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordConfirmText"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordConfirmEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/promptPWConfirm"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/changePasswordButtonText"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cancelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>