<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".banking.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/checkingLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:visibility="visible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/checkingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/checkingMain"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/checkingAccNumTxt"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/accountNumTxt"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/checkingAccNumVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/holo_green_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/checkingAccBalTxt"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/accountBalTxt"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/checkingAccBalVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/holo_green_dark" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/checkingAccStandTxt"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/accountStandingTxt"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/checkingAccStandVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/holo_green_dark" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/savingsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:visibility="visible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/savingsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:text="@string/savingsMain"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/savingsAccNum"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/accountNumTxt"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/savingsAccNumVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textAlignment="viewEnd"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_green_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/savingsAccBal"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/accountBalTxt"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/savingsAccBalVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textAlignment="viewEnd"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_green_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/savingAccStandingTxt"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/accountStandingTxt"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/savingAccStandVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/holo_green_dark" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logoutButtonTxt"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="207dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>